syntax = "proto3";

package communication;

message Capacity {
    int32 server1_status = 1;
    int32 server2_status = 2;
    int32 server3_status = 3;
    int64 timestamp = 4;
}