syntax = "proto3";

package communication_config;

message Configuration {
    int32 fault_tolerance_level = 1;
    MethodType method = 2;
}

enum MethodType {
    STRT = 0;
    STOP = 1;
}